# sde-harness

./: .gitignore  FRAMEWORK_DESIGN.md  IMPLEMENTATION_SUMMARY.md  Quick_Integration_Guide.md  README.md  WEAVE_LOG_FIX_SUMMARY.md  WEAVE_SETUP.md  WEAVE_TRACKING_GUIDE.md  credentials.template.yaml  environment.yml  models.template.yaml  pyproject.toml  pytest.ini  requirements.txt  requirements_weave.txt  setup.py
Projects/LLMEO/: README.md  _utils.py  cli.py  environment.yml  main.py  prompt.py  pytest.ini  requirements.txt  test.py
Projects/LLMProteinOptimizer/: README.md
config/: credentials.template.yaml  models.template.yaml
docs/: Quick_Integration_Guide.md
examples/: EXAMPLES_OVERVIEW.md  README.md  framework_usage_example.py  generation_examples.py  history_workflow_examples.py  weave_tracking_example.py
examples/advanced_usage/: 01_custom_metrics.py  README.md
examples/basic_usage/: 01_generation_basics.py  02_oracle_basics.py  03_prompt_basics.py  04_workflow_basics.py  04_workflow_basics_mock.py  README.md
examples/integration_examples/: 01_cli_integration.py  README.md
examples/project_examples/: README.md  run_llmeo_example.py
project/molleo/: README_RESTRUCTURED.md  example_usage.py
projects/bio-discovery-agent/: .gitignore  README_REFACTORING.md  cli.py  requirements.txt
projects/chat-mof/: .gitignore  README.md  cli_generate_verify.py  requirements.txt
projects/llmeo/: README.md  test.py
projects/llmsr/: README.md  cli.py  config.yaml  requirements.txt
projects/llmsr_old/: README_evolutionary.md
projects/matllmsearch/: .gitignore  (+3 more)
sci_demo/: __init__.py  generation.py  oracle.py  prompt.py  utils.py  workflow.py
sde_harness/: __init__.py
tests/: README.md  __init__.py  conftest.py  run_tests.py  test_base_classes.py  test_core_generation.py  test_core_oracle.py  test_core_prompt.py  test_core_workflow.py
(+313 files in other folders)
